// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should change page when user clicks on paginator 1`] = `
<main>
  <nav
    class="site-header"
  >
    <h2>
      Consents App
    </h2>
  </nav>
  <article
    class="layout"
  >
    <aside
      class="layout__links"
    >
      <a
        class=""
        href="/"
      >
        Global.headers.addConsent
      </a>
      <a
        aria-current="page"
        class="active"
        href="/list-consent"
      >
        Global.headers.listConsent
      </a>
    </aside>
    <section
      class="layout__screens"
    >
      <article
        class="list-consent"
      >
        <h2>
          ListConsent.header
        </h2>
        <section
          class="list-consent-table"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-11xur9t-MuiPaper-root-MuiTableContainer-root"
          >
            <table
              aria-label="simple table"
              class="MuiTable-root css-quj9j6-MuiTable-root"
            >
              <thead
                class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head css-1q1u3t4-MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-kqojm7-MuiTableCell-root"
                    scope="col"
                  >
                    username
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-kqojm7-MuiTableCell-root"
                    scope="col"
                  >
                    email
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-kqojm7-MuiTableCell-root"
                    scope="col"
                  >
                    consent
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root css-1enotpu-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1g0cxzy-MuiTableCell-root"
                  >
                    user3
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1g0cxzy-MuiTableCell-root"
                  >
                    user3@email.com
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1g0cxzy-MuiTableCell-root"
                  >
                    <p>
                      Global.consents.newsletter
                    </p>
                    <p />
                    <p />
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root css-1enotpu-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1g0cxzy-MuiTableCell-root"
                  >
                    user4
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1g0cxzy-MuiTableCell-root"
                  >
                    user4@email.com
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1g0cxzy-MuiTableCell-root"
                  >
                    <p />
                    <p>
                      Global.consents.ads
                    </p>
                    <p />
                  </td>
                </tr>
              </tbody>
              <tfoot
                class="MuiTableFooter-root css-9cgc89-MuiTableFooter-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-footer css-1q1u3t4-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-footer MuiTableCell-sizeMedium MuiTablePagination-root css-fikjyc-MuiTableCell-root-MuiTablePagination-root"
                    colspan="3"
                  >
                    <div
                      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular MuiTablePagination-toolbar css-11bfvty-MuiToolbar-root-MuiTablePagination-toolbar"
                    >
                      <div
                        class="MuiTablePagination-spacer css-1psng7p-MuiTablePagination-spacer"
                      />
                      <p
                        class="MuiTablePagination-selectLabel css-pdct74-MuiTablePagination-selectLabel"
                        id="mui-967595027"
                      >
                        Rows per page:
                      </p>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary css-16c50h-MuiInputBase-root-MuiTablePagination-select"
                      >
                        <select
                          aria-label="rows per page"
                          class="MuiTablePagination-select MuiNativeSelect-select MuiNativeSelect-standard MuiInputBase-input css-m3l1ig-MuiNativeSelect-select-MuiInputBase-input"
                          id="mui-419240514"
                        >
                          <option
                            class="MuiTablePagination-menuItem"
                            value="5"
                          >
                            5
                          </option>
                          <option
                            class="MuiTablePagination-menuItem"
                            value="10"
                          >
                            10
                          </option>
                          <option
                            class="MuiTablePagination-menuItem"
                            value="25"
                          >
                            25
                          </option>
                          <option
                            class="MuiTablePagination-menuItem"
                            value="-1"
                          >
                            All
                          </option>
                        </select>
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTablePagination-selectIcon MuiNativeSelect-icon MuiNativeSelect-iconStandard css-10bey84-MuiSvgIcon-root-MuiNativeSelect-icon"
                          data-testid="ArrowDropDownIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                      </div>
                      <p
                        class="MuiTablePagination-displayedRows css-levciy-MuiTablePagination-displayedRows"
                      >
                        3–4 of 5
                      </p>
                      <div
                        class="MuiBox-root css-1zye22"
                      >
                        <button
                          aria-label="first page"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="FirstPageIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M18.41 16.59 13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="previous page"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="KeyboardArrowLeftIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="next page"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="KeyboardArrowRightIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="last page"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="LastPageIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M5.59 7.41 10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </td>
                </tr>
              </tfoot>
            </table>
          </div>
        </section>
      </article>
    </section>
  </article>
  <div
    class="Toastify"
  />
</main>
`;

exports[`<App /> should render list of consents with 2 entries by default 1`] = `
<main>
  <nav
    class="site-header"
  >
    <h2>
      Consents App
    </h2>
  </nav>
  <article
    class="layout"
  >
    <aside
      class="layout__links"
    >
      <a
        class=""
        href="/"
      >
        Global.headers.addConsent
      </a>
      <a
        aria-current="page"
        class="active"
        href="/list-consent"
      >
        Global.headers.listConsent
      </a>
    </aside>
    <section
      class="layout__screens"
    >
      <article
        class="list-consent"
      >
        <h2>
          ListConsent.header
        </h2>
        <section
          class="list-consent-table"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-11xur9t-MuiPaper-root-MuiTableContainer-root"
          >
            <table
              aria-label="simple table"
              class="MuiTable-root css-quj9j6-MuiTable-root"
            >
              <thead
                class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head css-1q1u3t4-MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-kqojm7-MuiTableCell-root"
                    scope="col"
                  >
                    username
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-kqojm7-MuiTableCell-root"
                    scope="col"
                  >
                    email
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-kqojm7-MuiTableCell-root"
                    scope="col"
                  >
                    consent
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root css-1enotpu-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1g0cxzy-MuiTableCell-root"
                  >
                    user1
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1g0cxzy-MuiTableCell-root"
                  >
                    user1@email.com
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1g0cxzy-MuiTableCell-root"
                  >
                    <p>
                      Global.consents.newsletter
                    </p>
                    <p />
                    <p>
                      Global.consents.statistics
                    </p>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root css-1enotpu-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1g0cxzy-MuiTableCell-root"
                  >
                    user2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1g0cxzy-MuiTableCell-root"
                  >
                    user2@email.com
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1g0cxzy-MuiTableCell-root"
                  >
                    <p>
                      Global.consents.newsletter
                    </p>
                    <p>
                      Global.consents.ads
                    </p>
                    <p>
                      Global.consents.statistics
                    </p>
                  </td>
                </tr>
              </tbody>
              <tfoot
                class="MuiTableFooter-root css-9cgc89-MuiTableFooter-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-footer css-1q1u3t4-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-footer MuiTableCell-sizeMedium MuiTablePagination-root css-fikjyc-MuiTableCell-root-MuiTablePagination-root"
                    colspan="3"
                  >
                    <div
                      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular MuiTablePagination-toolbar css-11bfvty-MuiToolbar-root-MuiTablePagination-toolbar"
                    >
                      <div
                        class="MuiTablePagination-spacer css-1psng7p-MuiTablePagination-spacer"
                      />
                      <p
                        class="MuiTablePagination-selectLabel css-pdct74-MuiTablePagination-selectLabel"
                        id="mui-235685385"
                      >
                        Rows per page:
                      </p>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary css-16c50h-MuiInputBase-root-MuiTablePagination-select"
                      >
                        <select
                          aria-label="rows per page"
                          class="MuiTablePagination-select MuiNativeSelect-select MuiNativeSelect-standard MuiInputBase-input css-m3l1ig-MuiNativeSelect-select-MuiInputBase-input"
                          id="mui-671742756"
                        >
                          <option
                            class="MuiTablePagination-menuItem"
                            value="5"
                          >
                            5
                          </option>
                          <option
                            class="MuiTablePagination-menuItem"
                            value="10"
                          >
                            10
                          </option>
                          <option
                            class="MuiTablePagination-menuItem"
                            value="25"
                          >
                            25
                          </option>
                          <option
                            class="MuiTablePagination-menuItem"
                            value="-1"
                          >
                            All
                          </option>
                        </select>
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTablePagination-selectIcon MuiNativeSelect-icon MuiNativeSelect-iconStandard css-10bey84-MuiSvgIcon-root-MuiNativeSelect-icon"
                          data-testid="ArrowDropDownIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                      </div>
                      <p
                        class="MuiTablePagination-displayedRows css-levciy-MuiTablePagination-displayedRows"
                      >
                        1–2 of 5
                      </p>
                      <div
                        class="MuiBox-root css-1zye22"
                      >
                        <button
                          aria-label="first page"
                          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="FirstPageIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M18.41 16.59 13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
                            />
                          </svg>
                        </button>
                        <button
                          aria-label="previous page"
                          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="KeyboardArrowLeftIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
                            />
                          </svg>
                        </button>
                        <button
                          aria-label="next page"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="KeyboardArrowRightIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="last page"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="LastPageIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M5.59 7.41 10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </td>
                </tr>
              </tfoot>
            </table>
          </div>
        </section>
      </article>
    </section>
  </article>
  <div
    class="Toastify"
  />
</main>
`;
